--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -1,8 +1,98 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \title{The application of noisy-channel coding techniques to DNA barcoding}
 \author{Izaak van Dongen}
+
+\usepackage{savetrees}
+
 \usepackage{amsmath}
 \usepackage{amsfonts}
+\usepackage{commath}
+
+\usepackage[parfill]{parskip}
+
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+
+\usepackage{graphicx}
+
+\graphicspath{ {images/} }
+
+\usepackage{listings}
+\usepackage{color}
+
+\definecolor{codegreen}{rgb}{ 0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepturple},
+    basicstyle=\footnotesize,
+    breaklines=true,
+    captionpos=b,
+    keepspaces=true,
+    numbers=left,
+    numbersep=5pt,
+    showspaces=false,
+    showstringspaces=false,
+    showtabs=false,
+    tabsize=2
+}
+
+\lstset{style=mystyle}
+
+\lstset{
+    literate={~} {$\sim$}{1}
+}
+
 \begin{document}
     \maketitle
+    \tableofcontents
+
+    \section{Introduction}
+    The premise of this project is to investigate the different types of
+    error-correcting codes, and how these might be applied to DNA barcoding.
+    The challenge in this comes from the fact that most error-correcting codes
+    are designed in base-2 (binary) whereas DNA strings are fundamentally
+    base-4 (quaternary). The applicability of this project is that in
+    oligonucleotide synthesis, some samples may need to be idnetified later on
+    using a subseciton of the sample (a barcode). These could just be linearly
+    assigned codes, but this would leave them very susceptable to mutation.
+
+    Here is an example: say that we're given a barcode of length four, to
+    encode two different samples. If we worked methodically up from the bottom
+    (using the ordering ACGT - orderings will be discussed further later on) we
+    might end up with the codes AAAA and AAAC. However, either string would
+    only require a single mutation (where we say a mutation is the changing of
+    a single base) to become identical to the other one. Therefore, in this
+    case, it would clearly be far more optimal to make a choice like, for
+    example, AAAA and CCCC.
+
+    There have been a few assumptions and glossed over definitions here:
+
+    \begin{itemize}
+        \item What constitutes a mutation?
+        \item What is the best way to represent DNA mathematically?
+    \end{itemize}
+
+    There are also a number of parameters to the problem, and as they change
+    the problem becomes very much nontrivial:
+
+    \begin{itemize}
+    \item What if the barcode size changes?
+    \item What if we want more codes than two?
+    \item What if rather than number of codes and barcode size, the parameters
+          are set to barcode size and maximum number of mutations that can
+          occur?
+    \end{itemize}
+    
+    All of these will be further explored in this dissertation.
+
+    \section{Implementing the Hamming code}
+
+    \section{Source}
+
 \end{document}
