added sources to .bib file and changed name to 'sources'

--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -1,5 +1,5 @@
-\documentclass[12pt]{article}
-\title{The application of noisy-channel coding techniques to DNA barcoding}
+\documentclass{article}
+\title{The application of noisy-channel coding techniques to DNA barcoding (Early structure/ideas)}
 \author{Izaak van Dongen}
 
 \usepackage{savetrees}
@@ -91,8 +91,19 @@
     
     All of these will be further explored in this dissertation.
 
+    \section{The Hamming distance}
+
+    
+
     \section{Implementing the Hamming code}
 
     \section{Source}
+
+\nocite{CodeIntro}
+\nocite{Hamming}
+\nocite{HammingBarcodes}
+\nocite{Shannon}
+\bibliography{sources}{}
+\bibliographystyle{unsrt}
 
 \end{document}
