--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -29,7 +29,7 @@
     commentstyle=\color{codegreen},
     keywordstyle=\color{magenta},
     numberstyle=\tiny\color{codegray},
-    stringstyle=\color{codepturple},
+    stringstyle=\color{codepurple},
     basicstyle=\footnotesize,
     breaklines=true,
     captionpos=b,
@@ -51,6 +51,7 @@
 \begin{document}
     \maketitle
     \tableofcontents
+    \lstlistoflistings
 
     \section{Introduction}
     The premise of this project is to investigate the different types of
@@ -93,9 +94,64 @@
 
     \section{The Hamming distance}
 
-    
-
     \section{Implementing the Hamming code}
+
+    The script implementing a simple binary Hamming code is as follows:
+
+\begin{lstlisting}[language=Python, caption=Binary Hamming code in Python]
+#!/usr/bin/env python3
+
+"""
+Hamming encoding framework for binary objects, using even parity.
+"""
+
+from itertools import count, takewhile
+
+def powers_to(n):
+    return takewhile(lambda x: x < n, (1 << i for i in count()))
+
+def hamming_encode(bin_stream):
+    pwr = 1
+    out = []
+
+    for bit in bin_stream:
+        while len(out) + 1 == pwr:
+            pwr <<= 1
+            out.append(0)
+        out.append(bit)
+
+    for i in powers_to(len(out)):
+        out[i - 1] = 1 & sum(out[pbit] for pstart in range(i - 1, len(out), i << 1)
+                                       for pbit in range(pstart, pstart + i))
+    return out
+\end{lstlisting}
+
+    This code is accompanied by the following testing scheme:
+
+\begin{lstlisting}[language=Python, caption=binary\_hamming unit tests]
+"""
+Unit tests for binary_hamming.py
+"""
+
+import unittest
+
+from binary_hamming import powers_to, hamming_encode
+
+class BinaryHammingTestCase(unittest.TestCase):
+    def test_powers_to(self):
+        self.assertEqual(list(powers_to(0)), [])
+        self.assertEqual(list(powers_to(1)), [])
+        self.assertEqual(list(powers_to(2)), [1])
+        self.assertEqual(list(powers_to(4)), [1, 2])
+        self.assertEqual(list(powers_to(5)), [1, 2, 4])
+        self.assertEqual(list(powers_to(13)), [1, 2, 4, 8])
+
+    def test_hamming_encode(self):
+        self.assertEqual(hamming_encode([1, 0, 1, 1]), [0, 1, 1, 0, 0, 1, 1])
+
+if __name__ == "__main__":
+    unittest.main()
+\end{lstlisting}
 
     \section{Source}
 
