added some more sources and expanded dissertation

--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -159,6 +159,8 @@ if __name__ == "__main__":
 \nocite{Hamming}
 \nocite{HammingBarcodes}
 \nocite{Shannon}
+\nocite{PolynomialCodes}
+\nocite{Hadamard}
 \bibliography{sources}{}
 \bibliographystyle{unsrt}
 
