--- a/dissertation/sources.bib
+++ b/dissertation/sources.bib
@@ -33,3 +33,37 @@
     pages = {379–423, 623–656},
     note = {Accessed 2/02/2018 via http://affect-reason-utility.com/1301/4/shannon1948.pdf},
 }
+
+@article{PolynomialCodes,
+  author    = {Qian Yu and
+               Mohammad Ali Maddah{-}Ali and
+               Amir Salman Avestimehr},
+  title     = {Polynomial Codes: an Optimal Design for High-Dimensional Coded Matrix
+               Multiplication},
+  journal   = {CoRR},
+  volume    = {abs/1705.10464},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1705.10464},
+  archivePrefix = {arXiv},
+  eprint    = {1705.10464},
+  timestamp = {Wed, 14 Jun 2017 07:59:47 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/YuMA17a},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Hadamard,
+  author    = {{\'{A}}ngel del R{\'{\i}}o and
+               Josep Rif{\`{a}}},
+  title     = {Families of Hadamard Z2Z4Q8-codes},
+  journal   = {CoRR},
+  volume    = {abs/1211.5251},
+  year      = {2012},
+  url       = {http://arxiv.org/abs/1211.5251},
+  archivePrefix = {arXiv},
+  eprint    = {1211.5251},
+  timestamp = {Wed, 07 Jun 2017 14:42:53 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1211-5251},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
