--- a/dissertation/sources.bib
+++ b/dissertation/sources.bib
@@ -1,11 +1,11 @@
-@misc{CodeIntro,
+@misc{CodeIntro2010Guruswami,
     author = {Guruswami, Venkatesan},
     title = {Introduction to Coding Theory},
-    howpublished = {http://www.cs.cmu.edu/~venkatg/teaching/codingtheory/notes/notes1.pdf},
-    note = {Accessed: 26/01/2018},
+	year = {2010},
+    url = {http://www.cs.cmu.edu/~venkatg/teaching/codingtheory/notes/notes1.pdf},
 }
 
-@article{Hamming,
+@article{Codes1950Hamming,
     author = {Hamming, R. W.},
     title = {Error detecting and error correcting codes},
     year = {1950},
@@ -13,28 +13,28 @@
     volume = {26},
     number = {2},
     pages = {147--160},
-    note = {Accessed 26/01/2018 via http://sb.fluomedia.org/hamming/},
+    url = {http://sb.fluomedia.org/hamming/},
 }
 
-@article{HammingBarcodes,
+@article{HammingBarcodes2012BystrykhLeonid,
     author = {Bystrykh, Leonid V.},
     title = {Generalized DNA Barcode Design Based on Hamming Codes},
     year = {2012},
     journal = {PLOS ONE},
-    note = {Accessed 2/02/2018 via http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0036852},
+    url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0036852},
 }
 
-@article{Shannon,
+@article{Communication1948Shannon,
     author = {Shannon, C. E.},
     title = {A Mathematical Theory of Communication},
     year = {1948},
     journal = {The Bell System Technical Journal},
     volume = {27},
     pages = {379–423, 623–656},
-    note = {Accessed 2/02/2018 via http://affect-reason-utility.com/1301/4/shannon1948.pdf},
+    url = {http://affect-reason-utility.com/1301/4/shannon1948.pdf},
 }
 
-@article{PolynomialCodes,
+@article{PolynomialCodes2017MaddahAvestimehr,
   author    = {Qian Yu and
                Mohammad Ali Maddah{-}Ali and
                Amir Salman Avestimehr},
@@ -51,7 +51,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{Hadamard,
+@article{HadamardZ2Z2012RioRifa,
   author    = {{\'{A}}ngel del R{\'{\i}}o and
                Josep Rif{\`{a}}},
   title     = {Families of Hadamard Z2Z4Q8-codes},
@@ -66,4 +66,93 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{HadamardMatrices1978HedayatWallis,
+ ISSN = {00905364},
+ URL = {http://www.jstor.org/stable/2958712},
+ author = {A. Hedayat and W. D. Wallis},
+ journal = {The Annals of Statistics},
+ number = {6},
+ pages = {1184-1238},
+ publisher = {Institute of Mathematical Statistics},
+ title = {Hadamard Matrices and Their Applications},
+ volume = {6},
+ year = {1978}
+}
 
+@article{HadamardSearch1963GolombBaumert,
+ ISSN = {00029890, 19300972},
+ URL = {http://www.jstor.org/stable/2312777},
+ author = {Solomon W. Golomb and Leonard D. Baumert},
+ journal = {The American Mathematical Monthly},
+ number = {1},
+ pages = {12-17},
+ publisher = {Mathematical Association of America},
+ title = {The Search for Hadamard Matrices},
+ volume = {70},
+ year = {1963}
+}
+
+@article{HadamardCodingTheoretic1992AssmusKey,
+ ISSN = {00029947},
+ URL = {http://www.jstor.org/stable/2154164},
+ author = {E. F. Assmus and J. D. Key},
+ journal = {Transactions of the American Mathematical Society},
+ number = {1},
+ pages = {269-293},
+ publisher = {American Mathematical Society},
+ title = {Hadamard Matrices and Their Designs: A Coding-Theoretic Approach},
+ volume = {330},
+ year = {1992}
+}
+
+@article{HadamardDesigns1972Spence,
+ ISSN = {00029939, 10886826},
+ URL = {http://www.jstor.org/stable/2038298},
+ author = {Edward Spence},
+ journal = {Proceedings of the American Mathematical Society},
+ number = {1},
+ pages = {29-31},
+ publisher = {American Mathematical Society},
+ title = {Hadamard Designs},
+ volume = {32},
+ year = {1972}
+}
+
+@article{PolynomialDNA2013OztasSiap,
+ ISSN = {03545180, 24060933},
+ URL = {http://www.jstor.org/stable/24896375},
+ author = {Elif Segah Oztas and Irfan Siap},
+ journal = {Filomat},
+ number = {3},
+ pages = {459-466},
+ publisher = {University of Nis, Faculty of Sciences and Mathematics},
+ title = {Lifted Polynomials Over ${F}_{16}$ and Their Applications to DNA Codes},
+ volume = {27},
+ year = {2013}
+}
+
+@article{CodesCiphers1010Baylis,
+ ISSN = {00255572},
+ URL = {http://www.jstor.org/stable/25759725},
+ author = {John Baylis},
+ journal = {The Mathematical Gazette},
+ number = {531},
+ pages = {412-425},
+ publisher = {Mathematical Association},
+ title = {Codes, not ciphers},
+ volume = {94},
+ year = {2010}
+}
+
+@article{CodesOrigins1978Pless,
+ ISSN = {00029890, 19300972},
+ URL = {http://www.jstor.org/stable/2321784},
+ author = {Vera Pless},
+ journal = {The American Mathematical Monthly},
+ number = {2},
+ pages = {90-94},
+ publisher = {Mathematical Association of America},
+ title = {Error Correcting Codes: Practical Origins and Mathematical Implications},
+ volume = {85},
+ year = {1978}
+}
