changed source tracker and added a few sources

--- a/dissertation/sources.bib
+++ b/dissertation/sources.bib
@@ -156,3 +156,33 @@
  volume = {85},
  year = {1978}
 }
+
+@article{BooleRecords1956Kneale,
+ ISSN = {00359149},
+ URL = {http://www.jstor.org/stable/530792},
+ author = {W. Kneale},
+ journal = {Notes and Records of the Royal Society of London},
+ number = {1},
+ pages = {53-63},
+ publisher = {The Royal Society},
+ title = {Boole and the Algebra of Logic},
+ volume = {12},
+ year = {1956}
+}
+
+@inproceedings{DegeneracyHadamard2008Petoukhov,
+  title = {The degeneracy of the genetic code and Hadamard matrices},
+  author = {Sergey V. Petoukhov},
+  year = {2008},
+  URL = {https://arxiv.org/pdf/0802.3366.pdf},
+}
+
+@article{MultilevelConstruction2008TrinhFan,
+ author = {Trinh, Q.K. and Fan, Pingzhi},
+ year = {2008},
+ month = {11},
+ pages = {1250 - 1252},
+ title = {Construction of multilevel Hadamard matrices with small alphabet},
+ volume = {44},
+ booktitle = {Electronics Letters}
+}
