--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -15,7 +15,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-\usepackage{natbib}
+\usepackage[square]{natbib}
 
 \usepackage{graphicx}
 
