moved tex files into central directory and changed diary to a tex file

--- a/texfiles/dissertation.tex
+++ b/texfiles/dissertation.tex
@@ -112,6 +112,9 @@
 
     \section{Source}
 
+    All code and source \TeX/\LaTeX files can be found at
+    \verb|https://github.com/elterminad0r/EPQ|.
+
 \nocite{*}
 
 \bibliographystyle{agsm}
