--- a/texfiles/sources.bib
+++ b/texfiles/sources.bib
@@ -186,3 +186,16 @@
  volume = {44},
  booktitle = {Electronics Letters}
 }
+
+@article{DecodingHamming2006Eherenborg,
+ ISSN = {10724117, 19476213},
+ URL = {http://www.jstor.org/stable/25678619},
+ author = {Richard Ehrenborg},
+ journal = {Math Horizons},
+ number = {4},
+ pages = {16-17},
+ publisher = {Mathematical Association of America},
+ title = {Decoding the Hamming Code},
+ volume = {13},
+ year = {2006}
+}
