pre-arch commit

--- a/texfiles/diary.tex
+++ b/texfiles/diary.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\title{Source tracker}
+\title{EP diary}
 \author{Izaak van Dongen}
 
 \usepackage{fullpage}
@@ -9,7 +9,6 @@
 \usepackage{commath}
 
 \usepackage{longtable}
-\usepackage{booktabs}
 
 \usepackage[parfill]{parskip}
 
@@ -67,9 +66,9 @@
 
     Filled out PPR &
 
-    wasn't yet entirely sure about fine details &
+    Wasn't yet entirely sure about fine details &
 
-    complete the timescale &
+    Complete the timescale &
 
     (entered retroactively) \\ 2017-11-23 &
 
@@ -305,6 +304,47 @@
     I spent about an hour trying to make my LaTeX table pretty (worth it) &
 
     Start writing the actual evaluations/content summaries for each source &
+
+    \\ 2018-3-11 &
+
+    I wrote the evaluations for a number of sources. &
+
+    As my sources are currently almost all articles/papers, the evaluation
+    becomes a little monotonous. This also perhaps doesn't fully demonstrate
+    that I can also evaluate less reputable sources. &
+
+    Find a ``bad'' source (eg Daily Mail article or a forum post) to add some
+    variation. &
+
+    \\ 2018-3-15 &
+
+    Today I figured out how to use latexmk instead of just pdflatex or latex.
+    This made the work of compiling a lot easier. &
+
+    I had to install latexmk and create an appropriate config file, and figure
+    out how to use the various parameters. &
+
+    Incorporate this into my workflow, and start setting out my "problems etc"
+    document more thoroughly. &
+
+    \\ 2018-3-18 &
+
+    I spent some time writing about problems I faced and how I overcame them
+    with more detail, using my diary. &
+
+    It was a bit difficult to succinctly phrase how everything was ``overcome''
+    &
+
+    I should fill this in more fully &
+
+    \\ 2018-3-22 &
+
+    We did the peer review
+
+    \\ 2018-3-25 &
+
+    I spent some time writing my dissertation, focusing on the explanation
+    and visualisation of the Hamming distance, and parity.
 
     \\
 
