Wrote some of my dissertation and added postscript files.

--- a/texfiles/diary.tex
+++ b/texfiles/diary.tex
@@ -9,6 +9,7 @@
 \usepackage{commath}
 
 \usepackage{longtable}
+\usepackage{booktabs}
 
 \usepackage[parfill]{parskip}
 
@@ -346,14 +347,39 @@
     I spent some time writing my dissertation, focusing on the explanation
     and visualisation of the Hamming distance, and parity.
 
+    \\ 2018-3-29 &
+
+    I worked on explaining the idea of parity and produced a sample row/column
+    parity encoding
+
+    \\ 2018-4-8 &
+
+    After installing my new operating system, I successfully moved my project
+    over to it. This was made very easy due to my usage of git as a versioning
+    system. I also had to install the whole \LaTeX toolchain, but this went off
+    without a hitch.
+
+    \\ 2018-4-12 &
+
+    I re-read the specification for an EPQ and saw that I needed to include some
+    student information (candidate no., etc), and then added this.
+
+    \\ 2018-4-19 &
+
+    I wrote a bit about complexity and asymptotic complexity, and produced a
+    graph of $\sqrt{x}$ vs $\log_2 x$
+
+    \\ 2018-4-26 &
+
+    After finding a bug in the Hamming implementation, I spent some time
+    debugging and writing more tests.
+
     \\
 
     \bottomrule
-    \label{tab:sourceeval}
     \end{longtable}
     }
 
-    \ref{tab:sourceeval}
     \end{center}
 
 \end{document}
